@@ -28,12 +28,9 @@ import java.net.URL;
 import io.almostrealism.relation.Editable;
 import io.almostrealism.relation.Evaluable;
 import io.almostrealism.relation.Producer;
-import org.almostrealism.algebra.Triple;
 import org.almostrealism.algebra.Vector;
-import org.almostrealism.color.ColorEvaluable;
 import org.almostrealism.color.computations.GeneratedColorProducer;
 import org.almostrealism.color.RGB;
-import org.almostrealism.algebra.TripleFunction;
 
 
 // TODO  Improve documentation.
@@ -198,12 +195,12 @@ public class ImageTexture implements Texture, Editable {
   	}
   	
 	/**
-	 * @see org.almostrealism.texture.Texture#operate(Triple)
+	 * @see org.almostrealism.texture.Texture#operate(Vector)
 	 * 
 	 * @throws NullPointerException  If pixel data is not loaded.
 	 */
-	public RGB operate(Triple t) {
-		Vector point = new Vector(t.getA(), t.getB(), t.getC());
+	public RGB operate(Vector t) {
+		Vector point = new Vector(t.getX(), t.getY(), t.getZ());
 
 		if (this.type == ImageTexture.SPHERICAL_PROJECTION) {
 			Vector p = point.divide(point.length());
@@ -227,73 +224,50 @@ public class ImageTexture implements Texture, Editable {
 	}
 
 	/**
-	 * @param args {Double, Double, Double, Double}  X scale factor, Y scale factor, X offset, Y offset.
+	 * @param params {Double, Double, Double, Double}  X scale factor, Y scale factor, X offset, Y offset.
 	 * @throws IllegalArgumentException  If args does not contain the correct object types.
 	 * @throws NullPointerException  If pixel data is not loaded.
 	 * 
 	 * @see org.almostrealism.texture.Texture#getColorAt(java.lang.Object[])
 	 */
-	public Evaluable<RGB> getColorAt(Object args[]) {
-		return GeneratedColorProducer.fromFunction(this, new TripleFunction<Triple, RGB>() {
-			@Override
-			public RGB operate(Triple l) {
-				Vector point = new Vector(l.getA(), l.getB(), l.getC());
+	public Evaluable<RGB> getColorAt(Object params[]) {
+		return GeneratedColorProducer.fromProducer(this, () -> args -> {
+			Vector l = args.length > 0 ? (Vector) args[0] : new Vector(1.0, 1.0, 1.0);
+			Vector point = new Vector(l.getX(), l.getY(), l.getZ());
 
-				if (args[0] instanceof Double == false) throw new IllegalArgumentException("Illegal argument: " + args[0]);
-				if (args[1] instanceof Double == false) throw new IllegalArgumentException("Illegal argument: " + args[1]);
-				if (args[2] instanceof Double == false) throw new IllegalArgumentException("Illegal argument: " + args[2]);
-				if (args[3] instanceof Double == false) throw new IllegalArgumentException("Illegal argument: " + args[3]);
+			if (args[0] instanceof Double == false) throw new IllegalArgumentException("Illegal argument: " + args[0]);
+			if (args[1] instanceof Double == false) throw new IllegalArgumentException("Illegal argument: " + args[1]);
+			if (args[2] instanceof Double == false) throw new IllegalArgumentException("Illegal argument: " + args[2]);
+			if (args[3] instanceof Double == false) throw new IllegalArgumentException("Illegal argument: " + args[3]);
 
 
-				if (ImageTexture.this.type == ImageTexture.SPHERICAL_PROJECTION) {
-					Vector p = point.divide(point.length());
+			if (ImageTexture.this.type == ImageTexture.SPHERICAL_PROJECTION) {
+				Vector p = point.divide(point.length());
 
-					double north = Math.acos(-ImageTexture.this.northP.dotProduct(p));
-					double equator = Math.acos(p.dotProduct(ImageTexture.this.equatorP) / Math.sin(north)) / (2 * Math.PI);
+				double north = Math.acos(-ImageTexture.this.northP.dotProduct(p));
+				double equator = Math.acos(p.dotProduct(ImageTexture.this.equatorP) / Math.sin(north)) / (2 * Math.PI);
 
-					double u = (ImageTexture.this.crossP.dotProduct(p) < 0) ? equator : 1 - equator;
-					double v = north / Math.PI;
+				double u = (ImageTexture.this.crossP.dotProduct(p) < 0) ? equator : 1 - equator;
+				double v = north / Math.PI;
 
-					return ImageTexture.this.getColorAt(u, v, ((Double)args[0]).doubleValue(), ((Double)args[1]).doubleValue(),
-							((Double)args[2]).doubleValue(), ((Double)args[3]).doubleValue());
-				} else if (ImageTexture.this.type == ImageTexture.XY_PLANAR_PROJECTION) {
-					return ImageTexture.this.getColorAt(point.getX(), point.getY(),
-							((Double)args[0]).doubleValue(), ((Double)args[1]).doubleValue(),
-							((Double)args[2]).doubleValue(), ((Double)args[3]).doubleValue());
-				} else if (ImageTexture.this.type == ImageTexture.XZ_PLANAR_PROJECTION) {
-					return ImageTexture.this.getColorAt(point.getX(), point.getZ(),
-							((Double)args[0]).doubleValue(), ((Double)args[1]).doubleValue(),
-							((Double)args[2]).doubleValue(), ((Double)args[3]).doubleValue());
-				} else if (ImageTexture.this.type == ImageTexture.YZ_PLANAR_PROJECTION) {
-					return ImageTexture.this.getColorAt(point.getY(), point.getZ(),
-							((Double)args[0]).doubleValue(), ((Double)args[1]).doubleValue(),
-							((Double)args[2]).doubleValue(), ((Double)args[3]).doubleValue());
-				} else {
-					return null;
-				}
+				return ImageTexture.this.getColorAt(u, v, ((Double)args[0]).doubleValue(), ((Double)args[1]).doubleValue(),
+						((Double)args[2]).doubleValue(), ((Double)args[3]).doubleValue());
+			} else if (ImageTexture.this.type == ImageTexture.XY_PLANAR_PROJECTION) {
+				return ImageTexture.this.getColorAt(point.getX(), point.getY(),
+						((Double)args[0]).doubleValue(), ((Double)args[1]).doubleValue(),
+						((Double)args[2]).doubleValue(), ((Double)args[3]).doubleValue());
+			} else if (ImageTexture.this.type == ImageTexture.XZ_PLANAR_PROJECTION) {
+				return ImageTexture.this.getColorAt(point.getX(), point.getZ(),
+						((Double)args[0]).doubleValue(), ((Double)args[1]).doubleValue(),
+						((Double)args[2]).doubleValue(), ((Double)args[3]).doubleValue());
+			} else if (ImageTexture.this.type == ImageTexture.YZ_PLANAR_PROJECTION) {
+				return ImageTexture.this.getColorAt(point.getY(), point.getZ(),
+						((Double)args[0]).doubleValue(), ((Double)args[1]).doubleValue(),
+						((Double)args[2]).doubleValue(), ((Double)args[3]).doubleValue());
+			} else {
+				return null;
 			}
 		}).get();
-	}
-	
-	/**
-	 * @param args {Vector, Double, Double, Double, Double}  Point, X scale factor, Y scale factor, X offset, Y offset.
-	 * @throws IllegalArgumentException  If args does not contain the correct object types.
-	 * 
-	 * @see ColorEvaluable#evaluate(java.lang.Object[])
-	 */
-	@Override
-	public RGB evaluate(Object args[]) {
-	    if (!(args[0] instanceof Vector)) throw new IllegalArgumentException("Illegal argument: " + args[0]);
-	    if (!(args[1] instanceof Double)) throw new IllegalArgumentException("Illegal argument: " + args[1]);
-	    if (!(args[2] instanceof Double)) throw new IllegalArgumentException("Illegal argument: " + args[2]);
-	    if (!(args[3] instanceof Double)) throw new IllegalArgumentException("Illegal argument: " + args[3]);
-	    if (!(args[4] instanceof Double)) throw new IllegalArgumentException("Illegal argument: " + args[4]);
-	    
-	    Object o[] = new Object[args.length - 1];
-	    
-	    for (int i = 0; i < o.length; i++) o[i] = args[i + 1];
-	    
-	    return this.getColorAt(o).evaluate(args);
 	}
 
     /** @see io.almostrealism.relation.Editable#getPropertyNames() */
@@ -310,7 +284,7 @@ public class ImageTexture implements Texture, Editable {
 
     /** @see io.almostrealism.relation.Editable#getPropertyValues() */
 	@Override
-    public Object[] getPropertyValues() { return new Object[] {this.url, new Double(this.xScale), new Double(this.yScale)}; }
+    public Object[] getPropertyValues() { return new Object[] {this.url, Double.valueOf(this.xScale), Double.valueOf(this.yScale)}; }
 
     /** @see io.almostrealism.relation.Editable#setPropertyValue(java.lang.Object, int) */
 	@Override
